# wrld

./: pyproject.toml  readme.md
scripts/: generate_data.py  make_diagram.py  train.py
src/wrld/: data.py  env.py  models.py  train.py  visualize.py
